@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix warnings in HashBase.t
+
 0.020     2024-08-05 07:11:23-07:00 America/Los_Angeles
 
     - Fix test broken on Test::More
